fixed overflow

--- a/src/components/Inicio/Inicio.scss
+++ b/src/components/Inicio/Inicio.scss
@@ -14,7 +14,7 @@
 
 
 .inicio {
-    // overflow-y: hidden;
+    overflow-x: hidden;
     // z-index: 2;
     background: burlywood;
     min-height: 100vh;
