--- a/src/components/Inicio/subcomponents/Galeria/Galeria.scss
+++ b/src/components/Inicio/subcomponents/Galeria/Galeria.scss
@@ -9,7 +9,7 @@
 
 .slider-content {
     display: flex;
-
+    overflow: hidden;
 }
 
 .slide {
