--- a/src/index.css
+++ b/src/index.css
@@ -20,5 +20,6 @@
 body {
   margin: 0;
   font-family: 'Maven Pro';
+  overflow-x: hidden;
   /* font-family: 'Oswald'; */
 }
